hphp/hack/test/dot_hack/dot_hack_is_implicity_strict.hack
function foo() /* no return type - strict-mode only error */ {
}
